--- a/multiple-apps/Dockerfile
+++ b/multiple-apps/Dockerfile
@@ -1,22 +1,15 @@
-FROM node:6.9.1-slim
+FROM ubuntu:16.04
 MAINTAINER yussandeveloper@gmail.com
 
+RUN apt-get update -y && apt-get install -y software-properties-common supervisor
+RUN mkdir -p /var/log/supervisor
+
+COPY conf/etc /etc
+
 #create app directory
-RUN mkdir -p /usr/src/apps
+# RUN mkdir -p /usr/src/apps
 
 EXPOSE 8081
 EXPOSE 8082
 
-#firstapp
-WORKDIR /usr/src/apps/firstapp
-COPY ./apps/firstapp/. /usr/src/apps/firstapp
-RUN npm install
-
-CMD ["npm", "start"]
-
-#secondapp
-WORKDIR /usr/src/apps/secondapp
-COPY ./apps/secondapp/. /usr/src/apps/secondapp
-RUN npm install
-
-CMD ["npm", "start"]
+CMD ["/etc/supervisor/supervisor.sh"]
