--- a/multiple-apps/Dockerfile
+++ b/multiple-apps/Dockerfile
@@ -1,15 +1,18 @@
 FROM ubuntu:16.04
 MAINTAINER yussandeveloper@gmail.com
 
-RUN apt-get update -y && apt-get install -y software-properties-common supervisor
-RUN mkdir -p /var/log/supervisor
+RUN export DEBIAN_FRONTEND=noninteractive && set -x \
+  && apt-get update -y && apt-get install -y software-properties-common supervisor \
+  && apt-get install -y nodejs npm \
+  && apt-get autoremove -y -f \
+  && apt-get clean -y
 
 COPY conf/etc /etc
 
 #create app directory
 # RUN mkdir -p /usr/src/apps
 
+CMD ["/etc/supervisor/supervisor.sh"]
+
 EXPOSE 8081
 EXPOSE 8082
-
-CMD ["/etc/supervisor/supervisor.sh"]
