--- a/multiple-apps/conf/etc/supervisor/conf.d/secondapp.conf
+++ b/multiple-apps/conf/etc/supervisor/conf.d/secondapp.conf
@@ -1,5 +1,5 @@
-[program:firstapp]
-directory=/usr/src/apps/firstapp
+[program:secondapp]
+directory=/usr/src/apps/secondapp
 command=/usr/bin/nodejs index.js
 autostart=true
 autorestart=true
