solved auto reload development

--- a/multiple-apps/Dockerfile
+++ b/multiple-apps/Dockerfile
@@ -2,8 +2,10 @@ FROM ubuntu:16.04
 MAINTAINER yussandeveloper@gmail.com
 
 RUN export DEBIAN_FRONTEND=noninteractive && set -x \
-  && apt-get update -y && apt-get install -y software-properties-common supervisor \
-  && apt-get install -y nodejs npm \
+  && apt-get update -y \
+  && apt-get install -y supervisor nodejs npm \
+  && ln -s /usr/bin/nodejs /usr/bin/node \
+  && npm install -g nodemon \
   && apt-get autoremove -y -f \
   && apt-get clean -y
 
