--- a/multiple-apps/conf/etc/supervisor/conf.d/firstapp.conf
+++ b/multiple-apps/conf/etc/supervisor/conf.d/firstapp.conf
@@ -1,6 +1,6 @@
 [program:firstapp]
 directory=/usr/src/apps/firstapp
-command=/usr/bin/nodejs index.js
+command=/usr/bin/npm start
 autostart=true
 autorestart=true
 startretries=3
