--- a/multiple-apps/conf/etc/supervisor/conf.d/secondapp.conf
+++ b/multiple-apps/conf/etc/supervisor/conf.d/secondapp.conf
@@ -1,6 +1,6 @@
 [program:secondapp]
 directory=/usr/src/apps/secondapp
-command=/usr/bin/nodejs index.js
+command=/usr/bin/npm start
 autostart=true
 autorestart=true
 startretries=3
